[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/TabMain.gd" type="Script" id=1]
[ext_resource path="res://Font/HeaderFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Font/SectionFont.tres" type="DynamicFont" id=3]

[node name="Main" type="ScrollContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Container" type="VBoxContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="SettingsHeader" type="Label" parent="Container"]
margin_right = 1024.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 2 )
text = "Editor settings"

[node name="GamePathHeader" type="Label" parent="Container"]
margin_top = 71.0
margin_right = 1024.0
margin_bottom = 113.0
custom_fonts/font = ExtResource( 3 )
text = "Game path"
align = 1

[node name="GamePath" type="HBoxContainer" parent="Container"]
editor/display_folded = true
margin_top = 117.0
margin_right = 1024.0
margin_bottom = 141.0
alignment = 1

[node name="Label" type="Label" parent="Container/GamePath"]
margin_left = 498.0
margin_top = 3.0
margin_right = 498.0
margin_bottom = 21.0

[node name="Button" type="Button" parent="Container/GamePath"]
margin_left = 502.0
margin_right = 526.0
margin_bottom = 24.0
text = "..."

[node name="UserPathHeader" type="Label" parent="Container"]
margin_top = 145.0
margin_right = 1024.0
margin_bottom = 187.0
custom_fonts/font = ExtResource( 3 )
text = "User path"
align = 1

[node name="UserPath" type="HBoxContainer" parent="Container"]
editor/display_folded = true
margin_top = 191.0
margin_right = 1024.0
margin_bottom = 215.0
alignment = 1

[node name="Label" type="Label" parent="Container/UserPath"]
margin_left = 498.0
margin_top = 3.0
margin_right = 498.0
margin_bottom = 21.0

[node name="Button" type="Button" parent="Container/UserPath"]
margin_left = 502.0
margin_right = 526.0
margin_bottom = 24.0
text = "..."

[node name="MiscHeader" type="Label" parent="Container"]
margin_top = 219.0
margin_right = 1024.0
margin_bottom = 261.0
custom_fonts/font = ExtResource( 3 )
text = "Misc"
align = 1

[node name="MaximizeContainer" type="HBoxContainer" parent="Container"]
margin_top = 265.0
margin_right = 1024.0
margin_bottom = 305.0
alignment = 1

[node name="EnableMaximize" type="CheckButton" parent="Container/MaximizeContainer"]
margin_left = 416.0
margin_right = 608.0
margin_bottom = 40.0
text = "Maximize on start"
align = 1

[node name="LanguageContainer" type="HBoxContainer" parent="Container"]
editor/display_folded = true
margin_top = 309.0
margin_right = 1024.0
margin_bottom = 333.0
alignment = 1

[node name="Label" type="Label" parent="Container/LanguageContainer"]
margin_left = 429.0
margin_top = 3.0
margin_right = 549.0
margin_bottom = 21.0
text = "Preferred language"
align = 1

[node name="LanguageList" type="OptionButton" parent="Container/LanguageContainer"]
margin_left = 553.0
margin_right = 594.0
margin_bottom = 24.0

[node name="ThemesHeader" type="Label" parent="Container"]
margin_top = 337.0
margin_right = 1024.0
margin_bottom = 404.0
custom_fonts/font = ExtResource( 2 )
text = "Themes"

[node name="PackHeader" type="Label" parent="Container"]
margin_top = 408.0
margin_right = 1024.0
margin_bottom = 450.0
custom_fonts/font = ExtResource( 3 )
text = "Pack themes"
align = 1

[node name="PackContainer" type="HBoxContainer" parent="Container"]
margin_top = 454.0
margin_right = 1024.0
margin_bottom = 478.0
alignment = 1

[node name="PackThemes" type="Button" parent="Container/PackContainer"]
margin_left = 467.0
margin_right = 556.0
margin_bottom = 24.0
text = "Pack themes"

[node name="CreatePack" type="Button" parent="Container/PackContainer"]
visible = false
margin_left = 172.0
margin_right = 274.0
margin_bottom = 29.0
text = "Create pack"

[node name="PackName" type="LineEdit" parent="Container/PackContainer"]
visible = false
margin_left = 113.0
margin_right = 369.0
margin_bottom = 33.0
rect_min_size = Vector2( 256, 0 )
placeholder_text = "Enter package name"

[node name="SaveHeader" type="Label" parent="Container"]
visible = false
margin_right = 271.0
margin_bottom = 67.0
custom_fonts/font = ExtResource( 3 )
text = "Save theme"
align = 1

[node name="Save" type="HBoxContainer" parent="Container"]
editor/display_folded = true
visible = false
margin_right = 310.0
margin_bottom = 40.0
alignment = 1

[node name="Button" type="Button" parent="Container/Save"]
margin_left = 353.0
margin_right = 454.0
margin_bottom = 40.0
text = "Save theme"

[node name="EnableAutosave" type="CheckButton" parent="Container/Save"]
margin_left = 458.0
margin_right = 663.0
margin_bottom = 40.0
text = "Enable autosave"

[node name="SelectThemeHeader" type="Label" parent="Container"]
margin_top = 482.0
margin_right = 1024.0
margin_bottom = 524.0
custom_fonts/font = ExtResource( 3 )
text = "Select theme"
align = 1

[node name="SelectPack" type="Label" parent="Container"]
visible = false
margin_top = 548.0
margin_right = 333.0
margin_bottom = 571.0
text = "Select themes to pack"
align = 1

[node name="ThemeAlign" type="HBoxContainer" parent="Container"]
editor/display_folded = true
margin_top = 528.0
margin_right = 1024.0
margin_bottom = 528.0
alignment = 1

[node name="ThemesList" type="GridContainer" parent="Container/ThemeAlign"]
margin_left = 512.0
margin_right = 512.0
rect_clip_content = true

[node name="FileDialog" type="Control" parent="Container"]
editor/display_folded = true
margin_top = 532.0
margin_right = 1024.0
margin_bottom = 532.0

[node name="GameDialog" type="FileDialog" parent="Container/FileDialog"]
margin_left = 330.0
margin_top = -228.0
margin_right = 836.0
margin_bottom = 192.0
window_title = "Otwórz katalog"
mode = 2
access = 2
current_dir = "X:/Inne/Hedgewars/Theme Editor 3"
current_path = "X:/Inne/Hedgewars/Theme Editor 3/"

[node name="UserDialog" type="FileDialog" parent="Container/FileDialog"]
margin_left = 330.0
margin_top = -228.0
margin_right = 836.0
margin_bottom = 192.0
window_title = "Otwórz katalog"
mode = 2
access = 2
current_dir = "X:/Inne/Hedgewars/Theme Editor 3"
current_path = "X:/Inne/Hedgewars/Theme Editor 3/"

